--- a/src/CleanArchitecture.Web/Views/Shared/_Layout.cshtml
+++ b/src/CleanArchitecture.Web/Views/Shared/_Layout.cshtml
@@ -26,11 +26,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+
                 <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">CleanArchitecture.Web</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Author" asp-action="Index">Profile</a></li>
                 </ul>
             </div>
         </div>
